# PngToFilmstrip

./: .gitignore  .gitmodules  CMakeLists.txt  PngToFilmstrip.jucer  README.md
.github/workflows/: workflow.yml
Sources/: CreateFilmstripThread.h  Main.cpp  MainComponent.cpp  MainComponent.h
Tests/: PngToFilmstripTest.cpp
